@@ -1,4 +1,4 @@
-.TH SG_REASSIGN "8" "October 2017" "sg3_utils\-1.43" SG3_UTILS
+.TH SG_REASSIGN "8" "October 2019" "sg3_utils\-1.45" SG3_UTILS
 .SH NAME
 sg_reassign \- send SCSI REASSIGN BLOCKS command
 .SH SYNOPSIS
@@ -142,7 +142,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2005\-2017 Douglas Gilbert
+Copyright \(co 2005\-2019 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
