@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2003-2018 D. Gilbert
+ * Copyright (C) 2003-2019 D. Gilbert
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2, or (at your option)
